--- a/_posts/2022-07-30-test.md
+++ b/_posts/2022-07-30-test.md
@@ -1,8 +1,17 @@
 ---
 layout: post
+author: hattyoriiiiiii
 title:  a post with github metadata
 date: 2022-07-30
-description: 試しに書いてみた
-categories: sample-posts external-services
+description: → Webページ爆誕
+tags: ngs single-cell biology 3dprinter raspberrypi vr
+categories: Diary
 ---
 
+<br>
+
+24歳を迎えた今日、github.ioでWebページを公開しました。
+
+まずは、`About Me`を完成させなくては。
+
+## 目的
