initializing tech-blog

--- a/_posts/2022-07-30-test.md
+++ b/_posts/2022-07-30-test.md
@@ -1,17 +1,13 @@
 ---
 layout: post
 author: hattyoriiiiiii
-title:  a post with github metadata
+title:  test
 date: 2022-07-30
 description: → Webページ爆誕
-tags: ngs single-cell biology 3dprinter raspberrypi vr
+tags: 
 categories: Diary
 ---
 
 <br>
 
 24歳を迎えた今日、github.ioでWebページを公開しました。
-
-まずは、`About Me`を完成させなくては。
-
-## 目的
