updated several posts

--- a/_posts/2022-03-24-100P.md
+++ b/_posts/2022-03-24-100P.md
@@ -35,14 +35,17 @@ categories:
 「パッと出たゴミをポイッと捨てることができないのがだるい」これが課題です。
 
 <div class="row">
-    <div class="col-sm-4 mt-3 mt-md-0">
-        {% include figure.html path="assets/img/mobile_trash_can_intro.png" title="example image" class="img-fluid rounded z-depth-1" %}
-    </div>
-    <div class="col-sm-4 mt-3 mt-md-0">
+    <div class="col-sm-6 mt-3 mt-md-0">
         {% include figure.html path="assets/img/mobile_trash_can_intro2left.png" title="example image" class="img-fluid rounded z-depth-1" %}
     </div>
-    <div class="col-sm-4 mt-3 mt-md-0">
+    <div class="col-sm-6 mt-3 mt-md-0">
         {% include figure.html path="assets/img/mobile_trash_can_intro2right.png" title="example image" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/mobile_trash_can_intro.png" title="example image" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <div class="caption">
