--- a/_posts/2022-07-30-test.md
+++ b/_posts/2022-07-30-test.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: post
 author: hattyoriiiiiii
 title:  test
@@ -10,4 +10,4 @@ categories: Diary
 
 <br>
 
-24歳を迎えた今日、github.ioでWebページを公開しました。
+[![Typing SVG](https://readme-typing-svg.herokuapp.com?font=Signika+Negative&size=20&pause=2000&color=42B959&width=800&lines=24歳を迎えた今日、github.ioでWebページを公開しました。)](https://git.io/typing-svg) -->
