コードブロックをpython3からpythonに変更

--- a/_posts/2022-09-23-QRcode.md
+++ b/_posts/2022-09-23-QRcode.md
@@ -72,7 +72,7 @@ Google Colabの使い方は、[こちら](blog/2022/GoogleColab/)も参考にし
 !pip install qrcode
 ```
 
-```python3
+```python
 import qrcode
 from qrcode.image.styledpil import StyledPilImage
 
